hydroflow/tests/compile-fail/surface_demuxenum_wrongitems.stderr
error: Output connection conflicts with below ($DIR/tests/compile-fail/surface_demuxenum_wrongitems.rs:17:18) (1/2)
  --> tests/compile-fail/surface_demuxenum_wrongitems.rs:16:18
   |
16 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^

error: Output connection conflicts with above ($DIR/tests/compile-fail/surface_demuxenum_wrongitems.rs:16:18) (2/2)
  --> tests/compile-fail/surface_demuxenum_wrongitems.rs:17:18
   |
17 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^
